--- a/src/assets/css/about-road.css
+++ b/src/assets/css/about-road.css
@@ -68,3 +68,9 @@
   width: 60px;
   margin-right: 15px;
 }
+
+@media only screen and (max-width: 991px) {
+  .about-road {
+    margin-top: 70px;
+  }
+}
