--- a/src/assets/css/story.css
+++ b/src/assets/css/story.css
@@ -9,6 +9,7 @@
 }
 
 .story-container {
+  cursor: grab;
   width: 95%;
   height: auto;
   overflow: auto;
@@ -66,14 +67,14 @@
   justify-content: space-center;
 }
 .slick-dots li {
-  width: 70px;
+  width: 40px;
   height: 10px;
   background-color: #72b2ef;
   border-radius: 5px;
 }
 .slick-dots .slick-active {
   background-color: #226fb7;
-  width: 70px;
+  width: 40px;
 }
 
 .slick-dots li button {
