--- a/src/assets/css/skillsgrid.css
+++ b/src/assets/css/skillsgrid.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   border: 1px solid #dfe9eb;
   border-radius: 5px;
   padding: 15px;
@@ -20,24 +20,28 @@
 }
 
 .skill-item .item-img {
-  display: flex;
-  width: 100px;
-  height: 75px;
-  align-items: center;
-  justify-content: center;
   border-radius: 50%;
   padding: 5px;
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
   background: rgba(22, 170, 202, 0.2);
+  text-align: center;
+  transition: all 0.3s ease;
 }
 .skill-item .item-img img {
-  width: 30px;
+  max-width: 100%;
+  height: auto;
 }
 
 .skill-item .text-title {
   display: flex;
   flex-direction: column;
-  padding: 5px 10px;
-  padding-left: 20px;
+  padding: 5px 20px;
   justify-content: center;
 }
 .skill-item .text-title h4 {
@@ -47,7 +51,7 @@
 .skill-item .text-title .title {
   font-weight: bold;
   font-family: nunito, sans-serif;
-  font-size: 22px;
+  font-size: 15px;
 }
 
 .skill-item:hover {
@@ -62,7 +66,7 @@
   transition: all 1s ease;
 }
 
-.skill-item:hover .item-img img {
+.skill-item:hover > .item-img img {
   transition: all 2s ease;
   transform: scale(0.9);
 }
