--- a/src/assets/css/story.css
+++ b/src/assets/css/story.css
@@ -93,3 +93,18 @@
     margin: auto;
   }
 }
+
+@media only screen and (max-width: 576px) {
+  .story-item-desc {
+    font-size: 10px !important;
+  }
+  .story-title {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .story-container {
+    width: 100%;
+  }
+}
